backend: added some tests and found out I need to switch to postgres. frontend: added navbar. TODO: add styling
